# sgx-step

./: .gitignore  .gitmodules  README.md
app/libjpeg/: .gitignore  Makefile  main.c  profiler.c
app/libjpeg/Enclave/: Makefile  encl.c  encl.edl
app/libjpeg/Enclave/jpeg-9e/: Makefile  jconfig.h  jdatadst.c  jdatasrc.c  jdcoefct.c  jerror.c  jidctint.c
app/libjpeg/attack/: Cargo.toml  README.md  build.rs  libjpeg.c  to_bitmap.py
app/libjpeg/attack/src/: main.rs
app/profiler/: Cargo.toml  README.md
app/profiler/src/: dump.rs  lib.rs  tlblur.rs  tracer.rs
bindings/rust/sgx-step-sys/src/: lib.rs
libsgxstep/: Makefile  aep_trampoline.S  elf_parser.h  enclave.c  enclave.h  file.c  file.h  pf.c  simstep.c  simstep.h
