[package]
name = "libjpeg_attack"
version = "0.1.0"
edition = "2021"

[features]
default = ["sgx"]
sgx = ["sgx-urts-sys", "sgx-step", "cc"]

[build-dependencies]
cc = { version = "1.0", optional = true }

[dependencies]
libloading = "0.8"
clap = { version = "4.4.18", features = ["derive"] }
nix = { version = "0.27.1", features = ["signal", "ptrace"] }
once_cell = "1.19"
bmp = "0.5"
indicatif = "0.17"
image = "0.25"
vcd = "0.7"
sgx-urts-sys = { path = "../../../bindings/rust/sgx-urts-sys", optional = true }
sgx-step = { path = "../../../bindings/rust/sgx-step-rs", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
